[package]
authors = ["Marc Nijdam <marc@helium.com>", "Jay Kickliter <jay@helium.com>"]
categories = ["embedded"]
description = "An API for processing Helium LongFi wireless packets"
edition = "2018"
homepage = "https://github.com/helium/longfi-rs"
keywords = ["lora", "protocol", "radio"]
license = "Apache-2.0"
name = "longfi"
readme = "README.md"
repository = "https://github.com/helium/longfi-rs.git"
version = "0.2.0"

[workspace]
members = ["longfi-sys"]

[dependencies]
lfs = { package = "longfi-sys", path = "longfi-sys" }
