[package]
authors = ["Marc Nijdam <marc@helium.com>", "Jay Kickliter <jay@helium.com>"]
build = "build.rs"
categories = ["embedded"]
description = "Low level bindings to the longfi-core library (lfc)"
edition = "2018"
homepage = "https://github.com/helium/longfi-rs"
keywords = ["lora", "protocol", "radio"]
license = "Apache-2.0"
links = "lfc"
name = "longfi-sys"
readme = "../README.md"
repository = "https://github.com/helium/longfi-rs.git"
version = "0.2.0"

[build-dependencies]
cmake = "0.1"
